--- a/aboutus.css
+++ b/aboutus.css
@@ -28,7 +28,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgba(0, 0, 0, 0.8);
+    background: #121212;
     z-index: 1000;
   }
 
@@ -64,7 +64,14 @@ header {
     text-decoration: none;
     font-size: 18px;
   }
-
+  .nav-links li a:hover {
+    color: #ff2b06;
+  }
+  .nav-link.active {
+    color: red;
+    font-weight: bold;
+    border-bottom: 2px solid red; /* Optional underline */
+  }
   .menu-btn {
     display: none;
     font-size: 1.5rem;
@@ -500,12 +507,14 @@ footer {
     display: flex;
       gap: 5rem;
       align-items: center;
+      
 }
 .intro-card.reverse{
     flex-direction: row-reverse;
 }
 .intro-info{
     flex: 1;
+
     background: rgba(255, 255, 255, 0.1);
       border-radius: 1.75rem;
       padding: 3rem;
