--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@
   body {
     background-size: cover;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
