--- a/index.css
+++ b/index.css
@@ -110,7 +110,7 @@ nav {
   padding-bottom: 304px;
   text-align: center;
   position: relative;
-  /* margin-top: 60px; */
+  margin-top: 60px;
 }
 
 .content {
@@ -122,7 +122,7 @@ nav {
   align-items: center;
   margin-left: calc(50% - 575px);
   /* 50% center - half width + extra right */
-  /* margin-top: auto; */
+  margin-top: auto;
   /* Adjust this value as needed */
   /* transform: translateY(-50%); */
 }
@@ -1347,4 +1347,10 @@ footer {
   .content {
     top: 100px;
   }
+}
+.hero-logo {
+  width: 200px;
+  height: auto;
+  display: block;
+  margin: 0 auto 8px;
 }
