--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 /* Base Styles and Variables */
 :root {
   --tedx-red: #ff2b06;
-  --dark-bg: #121212;
+  --dark-bg: #1a1a1a;
   --card-bg: rgba(233, 233, 233, 0.03);
 }
 
@@ -110,7 +110,7 @@ nav {
   padding-bottom: 304px;
   text-align: center;
   position: relative;
-  margin-top: 60px;
+  margin-top: 80px;
 }
 
 .content {
@@ -1172,7 +1172,7 @@ nav {
 
 /* Footer Styles */
 footer {
-  width: 100%;
+  width: 90%;
   background: #1a1a1a;
   color: #fff;
   padding: 15px 0;
@@ -1181,7 +1181,7 @@ footer {
 }
 
 .footer-container {
-  width: 85%;
+  width: 70%;
   margin: auto;
 }
 
