Changes to speakers in home

--- a/index.css
+++ b/index.css
@@ -110,7 +110,7 @@ nav {
   padding-bottom: 304px;
   text-align: center;
   position: relative;
-  margin-top: 60px;
+  /* margin-top: 55px; */
 }
 
 .content {
