--- a/index.css
+++ b/index.css
@@ -111,6 +111,7 @@ nav {
   text-align: center;
   position: relative;
   margin-top: 80px;
+  left:100;
 }
 
 .content {
@@ -159,7 +160,7 @@ h1 {
   border-radius: 15px;
   border: none;
   position: relative;
-  top: 90px;
+  top: 80px;
   transition: 0.3s ease-in-out;
   cursor: pointer;
   display: flex;
@@ -189,7 +190,7 @@ h1 {
 }
 @media(min-width:1088px){
   .btn1{
-    top:78px;
+    top: 78px;
     right:25px;
   }
   
@@ -1365,10 +1366,15 @@ footer {
   height: auto;
   display: block;
   margin: 0 auto 8px;
+  position: relative;
+  right:20px;
 }
 
 @media (max-width: 768px) {
   .hero-logo {
     width: 200px;
   }
+}
+#typewriter{
+  font-size: 65px;
 }
