--- a/aboutus.css
+++ b/aboutus.css
@@ -1293,9 +1293,14 @@ footer {
         align-items: center;
       }
 
-      .logo-col {
+      .logo-col img {
         position: relative;
         left: 50px;
       }
+      .footer-desc{
+        position: relative;
+        left: 10px;
+      }
 
     }
+    
