HEADER LOGO FIX

--- a/aboutus.css
+++ b/aboutus.css
@@ -1301,9 +1301,9 @@ footer {
         position: relative;
         left: 10px;
       }
-      .logo{
+      /* .logo{
         width:100%;
-      }
+      } */
     }
     .footer-links{
         position: relative;
