--- a/index1.css
+++ b/index1.css
@@ -14,7 +14,7 @@
   
   body {
     min-height: 100vh;
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
